Update title and background banner image.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
         
-    <title>TEDxUCSB 2020</title>
+    <title>TEDxUCSB 2024</title>
         <meta name="description" content="Official TEDxUCSB Website">
 		<meta name="keywords" content="TED, TEDx, TEDxUCSB">
     
@@ -62,7 +62,7 @@
     </nav>
     <!-- END nav -->
 
-    <section class="pb_cover_v1 text-left cover-bg-black cover-bg-opacity-1" style="background-image: url(assets/hero_image.jpg)" id="section-home">
+    <section class="pb_cover_v1 text-left" style="background-image: url(assets/new-hero-banner.svg)" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-end">
           <div class="col-md-6  order-md-1" style="text-align: right;">
