Change banner message post-conference.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-end">
           <div class="col-md-6  order-md-1" style="text-align: right;">
-            <h1 class="heading mb-5"><br> Get ready for TOTAL ECLIPSE! Friday, April 26th, 2024 at 5:30 PM at Music LLCH</h1>
+            <h1 class="heading mb-5"><br> Thanks for coming to our 2024 conference! See you in 2025!</h1>
     
               
 <!--comment after sold out/event over-->
