Add external link to Instagram account.

--- a/index.html
+++ b/index.html
@@ -338,6 +338,10 @@
           <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-1a1e67b3-bea6-4375-9e01-6b371b8d0bbd"></div>     
 
+<br><br>
+
+All of our posts can be found at <a href="https://instagram.com/tedxucsb" style="color: red;">https://instagram.com/tedxucsb</a>.
+
 
         
         
