Add mobile friendly design.

--- a/alt.html
+++ b/alt.html
@@ -6,6 +6,8 @@
         <title>TEDxUCSB</title>
 
         <link rel="stylesheet" href="style.css">
+
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
     </head>
     <body>
     <div id="body-div">
