Add board application form.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
 
         </div>
 
+        <div id="update">
+
+            <p class="header">
+                Update: Board Applications are Open!
+            </p>
+
+            <p>
+                Do you want to help organize TEDxUCSB's 2025 Annual Conference? You should apply to join our board! TEDxUCSB is perfect for UCSB students looking for leadership opportunities on campus that have a direct, visible impact on the SB community, or even for people who simply want to be a part of an awesome community of motivated peers! Applications are open! We can't wait to have you join our team!
+            </p>
+
+            <div class="button-container">
+
+                <a href="https://tinyurl.com/tedxucsb-board-app-24" target="_blank" rel="noopener noreferrer" class="button">Apply Now!</a>
+
+            </div>
+
+        </div>
+
         <div id="about-us" class="shadow">
 
             <p class="header">
@@ -102,7 +120,7 @@
             </p>
 
             <p>
-                Applications to join our board open each year in September. Until then, feel free to contact us at <a href="mailto:ucsb.tedx@gmail.com">ucsb.tedx@gmail.com</a> or reach out via Instagram at <a href="https://instagram.com/tedxucsb">instagram.com/tedxucsb</a>!
+                Applications to join our board are now open! Apply at <a href="https://tinyurl.com/tedxucsb-board-app-24" target="_blank" rel="noopener noreferrer">tinyurl.com/tedxucsb-board-app-24</a>. Feel free to contact us at <a href="mailto:ucsb.tedx@gmail.com">ucsb.tedx@gmail.com</a> or reach out via Instagram at <a href="https://instagram.com/tedxucsb" target="_blank" rel="noopener noreferrer">instagram.com/tedxucsb</a>!
             </p>
 
         </div>
