--- a/index.html
+++ b/index.html
@@ -90,16 +90,24 @@
         <div id="update">
 
             <p class="header">
-                Update: Board Applications are Open!
+                Update: Speaker Applications are Open!
             </p>
 
             <p>
-                Do you want to help organize TEDxUCSB's 2025 Annual Conference? You should apply to join our board! TEDxUCSB is perfect for UCSB students looking for leadership opportunities on campus that have a direct, visible impact on the SB community, or even for people who simply want to be a part of an awesome community of motivated peers! Applications are open! We can't wait to have you join our team!
+                Good news: today's the perfect once-in-a-lifetime opportunity to apply to give a TEDx talk at UCSB! Whether you are a student at UCSB or a general speaker, TEDxUCSB is the perfect stage to share your vision with the world! Applications are open!
+            </p>
+
+            <p>
+                If you instead want to help organize our conference, then board applications are also open. We can't wait to have you join our team!
             </p>
 
             <div class="button-container">
 
-                <a href="https://tinyurl.com/tedxucsb-board-app-24" target="_blank" rel="noopener noreferrer" class="button">Apply Now!</a>
+                <a href="https://tinyurl.com/tedxucsb-student-app-24" target="_blank" rel="noopener noreferrer" class="button application-button">Student Speaker Application</a>
+
+                <a href="https://tinyurl.com/tedxucsb-general-app-24" target="_blank" rel="noopener noreferrer" class="button application-button">General Speaker Application</a>
+
+                <a href="https://tinyurl.com/tedxucsb-board-app-24" target="_blank" rel="noopener noreferrer" class="button application-button">Board Application</a>
 
             </div>
 
