Remove board application form.

--- a/index.html
+++ b/index.html
@@ -90,15 +90,11 @@
         <div id="update">
 
             <p class="header">
-                Update: Speaker Applications are Open!
+                Update: Speaker Application Deadline Extended!
             </p>
 
             <p>
                 Good news: today's the perfect once-in-a-lifetime opportunity to apply to give a TEDx talk at UCSB! Whether you are a student at UCSB or a general speaker, TEDxUCSB is the perfect stage to share your vision with the world! Applications are open!
-            </p>
-
-            <p>
-                If you instead want to help organize our conference, then board applications are also open. We can't wait to have you join our team!
             </p>
 
             <div class="button-container">
@@ -106,8 +102,6 @@
                 <a href="https://tinyurl.com/tedxucsb-student-app-24" target="_blank" rel="noopener noreferrer" class="button application-button">Student Speaker Application</a>
 
                 <a href="https://tinyurl.com/tedxucsb-general-app-24" target="_blank" rel="noopener noreferrer" class="button application-button">General Speaker Application</a>
-
-                <a href="https://tinyurl.com/tedxucsb-board-app-24" target="_blank" rel="noopener noreferrer" class="button application-button">Board Application</a>
 
             </div>
 
