Remove speaker applications.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         </div>
 
-        <div id="update">
+        <!-- <div id="update">
 
             <p class="header">
                 Update: Speaker Application Deadline Extended!
@@ -105,7 +105,7 @@
 
             </div>
 
-        </div>
+        </div> -->
 
         <div id="about-us" class="shadow">
 
